second_model_added

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -15,6 +15,10 @@
     <% end %>
   </div>
 
+<div>
+  <%= form.label :status %><br>
+  <%= form.select :status, Visible::VALID_STATUSES, selected: article.status || 'public' %><br><br>
+</div>
   <div>
     <%= form.submit %>
   </div>
